[gd_scene load_steps=3 format=3 uid="uid://gr3gedwxw0qq"]

[ext_resource type="Script" uid="uid://ct5lvtv6mlpet" path="res://settings.gd" id="1_x2hje"]
[ext_resource type="AudioStream" uid="uid://c8avyj1njvp41" path="res://audio/spaceship-arcade-shooter-game-background-soundtrack-318508.mp3" id="2_nkug2"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x2hje")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Vol_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="Resolutions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 3
item_count = 4
popup/item_0/text = "1280x960"
popup/item_0/id = 0
popup/item_1/text = "1024x768"
popup/item_1/id = 1
popup/item_2/text = "800x600"
popup/item_2/id = 2
popup/item_3/text = "640x480"
popup/item_3/id = 3

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_nkug2")
volume_db = -10.0
autoplay = true

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
